fixed style bleeding

--- a/src/components/CategoryList.css
+++ b/src/components/CategoryList.css
@@ -1,4 +1,5 @@
-.category {
+
+.category-list .category {
   font-size: 18px;
   margin: 10px;
 }
